--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "^6.5.0",
