--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.9.0",
+    "axios": "^0.19.0",
     "eslint": "^6.5.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-loader": "^3.0.2",
